Footer, Dividers, Mobile Spacing, fixed header-show

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -134,6 +134,28 @@ a {
   object-fit: cover;
 }
 
+.wrapper {
+  padding-bottom: 90px;
+}
+
+.divider {
+  position: relative;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+	height: 1px;
+}
+
+.div-transparent:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0%;
+	right: 0%;
+	width: 100%;
+	height: 1.5px;
+	background-image: linear-gradient(to right, transparent, $clr-accent-100, transparent);
+}
+
 body {
   background: $clr-neutral-400;
 }
@@ -168,8 +190,7 @@ body {
 
 
 .header-home {
-  margin-top: 18vh;
-  margin-bottom: 20vh;
+  margin-top: 12vh;
   text-align: center;
 
   h1 {
@@ -188,10 +209,25 @@ body {
   }
 }
 
-@media(max-width: 1000px) {
-  #web, #about {
-    margin-bottom: 60vh;
+.footer {
+  display: grid;
+  justify-content: center;
+
+  p {
+    margin-bottom: 2rem;
+    justify-self: center;
+    color: $clr-neutral-200;
   }
+
+  img {
+    object-fit: contain;
+    justify-self: center;
+    max-width: 3rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media(max-width: 1000px) {
   .menu-bars {
     margin-left: 2rem;
     font-size: 2rem;
@@ -256,6 +292,11 @@ body {
     display: flex;
     justify-content: start;
     align-items: center;
+  }
+
+  .navbar-show {
+    height: 100px;
+    display: fixed;
   }
 
   .avatar-img {
